# CohortVarLinker

./: .gitignore  README.md  cohorts_units.py  common_codes.csv  docker-compose.yml  granular_classifications.xlsx  main.py  pre_process_vocab.py  pyproject.toml  training_examples.py  unit_conversion.py  unit_norm_audit.csv  validate_cde.py  variable_similarity_matches.csv  vis.py  viz.html
data/: cohort_metadata_sheet.csv  icare4cvd_vocabulary.xlsx  mapping_templates.json  mapping_templates_v0.json  studies_metadata.csv  studies_metadata_v2.csv
data/cohorts/AachenHF/: AachenHF_04_06_2025_KG.csv  AachenHF_14_07_2025_KG.csv  AachenHF_20_06_2025_KG.csv  AachenHF_28_04_2025_KG.csv  eda_output_AachenHF.json
data/cohorts/CACHEXIA/: CACHEXIA.csv
data/cohorts/CHECK-HF/: CHECK-HF_14_07_2025.csv  CHECK-HF_20_06_2025.csv  CHECK-HF_28_04_2025.csv
data/cohorts/Cardiateam/: CARDIATEAM_KG_14_07_2025.csv  CARDIATEAM_KG_16_05_2025.xlsx
data/cohorts/D1Namo/: D1Namo.xlsx
data/cohorts/GISSI-HF Outcomes/: GISSI-HF Outcomes.xlsx  (+1 more)
data/graphs/: aachenhf_metadata.trig  cachexia_metadata.trig  cardiateam_metadata.trig  check-hf_metadata.trig  d1namo_metadata.trig  gissi-hf_outcomes_metadata.trig  sfdt1_metadata.trig  studies_metadata.trig
data/output/: time-chf_aachenhf_full.csv  time-chf_cachexia_check-hf_gissi-hf_grouped.json  time-chf_cachexia_check-hf_grouped.csv  time-chf_cachexia_full.csv  time-chf_cachexia_grouped.csv  time-chf_cardiateam_full.csv  time-chf_check-hf_full.csv  time-chf_gissi-hf_full.csv  time-chf_tim-hf_full.csv
data/oxigraph/: 000034.sst  000110.sst  000111.sst  000112.sst  000113.sst  000183.sst  000190.sst  IDENTITY  LOG  LOG.old.1750846757858881  LOG.old.1750846770384495  LOG.old.1751733258820318  LOG.old.1753288495392234  MANIFEST-000192  OPTIONS-000216  OPTIONS-000218
data/queries/: article_reported.txt
experiment/: LINOW.py  LINOW_EMB.py  SIGEM.py  all_in_one.py  config.py  constraints.py  ex_config.py  fetch.py  fetch_emb.py  fetch_other.py  fetch_topK_SPARSE_BCH.py  fetch_v2.py  hierarchy.py  lazy_model.py  neuro_matcher.py  omop_graph.py  omop_graph_v2.py  query_builder.py  run.py  similarity_check.py  study_kg.py  train.py  training.py  utils.py  validate_cde.py  variable_profile.py  variables_kg copy.py  variables_kg.py  variables_kg_v2.py  vector_db.py
other/: config.py  derived_variable.py  fetch.py  fetch_v1.py  fetch_v2.py  lazy_model.py  sparql_llm.py  utils.py  validate_cde.py  variables_kg.py  vector_db.py
src/: config.py  datamanager.py  fetch.py  fetch_v1.py  omop_graph.py  study_kg.py  utils.py  variables_kg.py
tests/: test_omop_graph.py  test_vector_db.py  tests_utils.py
(+12 files in other folders)
