[project]
name = "cmh"
version = "0.1.0"
description = "clinical metadata harmonization"
authors = [
    {name = "Komal Gilani",email = "komalsyeda29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
    matplotlib = "*"
    seaborn = "*"
    requests = "*"
    tqdm = "4.66.6"
    setuptools = "*"
    pyreadstat = "*"
    dateinfer = "*"
    quantulum = "*"
    rdflib = "*"
    sparqlwrapper = "*"
    python-dotenv = "*"
    chardet = "*"
    oxrdflib = "*"
    plotly = "*"
    networkx = "*"
    decentriq_util= "*"
    ontospy="*"
    pylode= "*"
    openai="*"
    faiss-cpu = "*"
    owlready2 = "*"
    asyncpg = "*"
    greenlet = "*"
    torch = "*"
    transformers = "*"
    scipy = "1.13.1"
    scikit-learn = "1.5.2"
    jinja2 = "*"
    pyvis = "*"
    optimum = "*"
    openpyxl = "*"
    thefuzz = "^0.22.1"
    pint = "^0.24.4"
    pyreadr = "^0.5.3"
    sentence-transformers = "^5.1.2"
    squarify = "^0.4.4"
    circlify = "^0.15.1"
    tensorflow = "2.18.0"
    tf-keras = "==2.18.*"
    pandas = "^2.3.3"
    numpy = "<2.3"
qdrant-client = "1.14.2"



[tool.poetry]
packages = [{include = "experiment"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
